Added function skeleton

--- a/phase_1/week_6/lab/oop_ds_lab.ipynb
+++ b/phase_1/week_6/lab/oop_ds_lab.ipynb
@@ -56,7 +56,7 @@
     "        # don't load data just yet!\n",
     "        self.file = file\n",
     "        # prepare a private empty tuple to contain clean data\n",
-    "        self.__clean_data = []\n",
+    "        self._clean_data = []\n",
     "\n",
     "    def clean(self, outpath):\n",
     "        # read in data and record only clean data\n",
@@ -80,7 +80,7 @@
     "            writer.writerows(new_data)\n",
     "        \n",
     "        # record in attribute\n",
-    "        self.__clean_data = new_data\n",
+    "        self._clean_data = new_data\n",
     "\n"
    ]
   },
@@ -107,7 +107,16 @@
     "        # initialize attributes using the super class\n",
     "        super().__init__(file)\n",
     "        # clean this data by default\n",
-    "        self.clean()"
+    "        self.clean()\n",
+    "    \n",
+    "    def get_total_volume(self):\n",
+    "        pass\n",
+    "\n",
+    "    def get_max(self):\n",
+    "        pass\n",
+    "\n",
+    "    def get_min(self):\n",
+    "        pass"
    ]
   },
   {
