--- a/phase_1/week_6/lab/oop_ds_review_notes.ipynb
+++ b/phase_1/week_6/lab/oop_ds_review_notes.ipynb
@@ -87,14 +87,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OOP in Data Engineering"
+    "## Type-Hinting Classes\n",
+    "\n",
+    "If we want to type-hint a class that we created ourselves, we could either enclose the type in strings.\n",
+    "\n",
+    "Or import annotations from the “future”\n",
+    "\n",
+    "https://peps.python.org/pep-0563/ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function attached to class “Fellow”\n",
+    "def in_common(self, other_fellow: 'Fellow'):\n",
+    "    new_list = []\n",
+    "    for person in self.familiars:\n",
+    "        if person in other_fellow.familiars:\n",
+    "            new_list .append(person)\n",
+    "    return new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import annotations\n",
+    "\n",
+    "# function attached to class “Fellow”\n",
+    "def in_common(self, other_fellow: Fellow):\n",
+    "    new_list = []\n",
+    "    for person in self.familiars:\n",
+    "        if person in other_fellow.familiars:\n",
+    "            new_list .append(person)\n",
+    "    return new_list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Signature Practice\n"
+    "## OOP in Data Engineering\n",
+    "\n",
+    "We could potentially encapsulate data-engineering functionality  (loading, cleaning, processing) inside of a class.\n",
+    "\n",
+    "But make sure that this class is *effective* and *necessary*, which is where skills in complexity management comes in.\n",
+    "\n",
+    "It’s better to have a function that does ONE thing correctly, than a class that does a bunch of things half-...correctly.\n",
+    "\n",
+    "Questions to ask yourself before engineering a pipeline object:\n",
+    "\n",
+    "* Does this need to be a class?\n",
+    "  * Does this pipeline need “state” and “behavior”? Do I need to reuse this pipeline? Does this pipeline already exist?\n",
+    "\n",
+    "* Does data need to be loaded constantly?\n",
+    "  * “Opening” the data could be resource-intensive.\n",
+    "\n",
+    "* What input am I getting?\n",
+    "  * Data-type, format.\n",
+    "\n",
+    "* What output am I generating?\n",
+    "  * Data-type, format.\n",
+    "\n",
+    "* What guarantees am I given?\n",
+    "  * Is data already clean?\n",
+    "\n",
+    "* What guarantees am I providing?\n",
+    "  * What will my pipeline do if data is dirty?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signature Practice\n",
+    "\n",
+    "Write Python code to take in a file name and generates a signature at the end of that file.\n",
+    "\n",
+    "Does this need to be a class?\n",
+    "* No. There is no state of data that I am keeping track of.\n",
+    "Does data need to be loaded constantly?\n",
+    "* No. Loading once is good enough.\n",
+    "What input am I getting?\n",
+    "* A file name. Possibly a signature too.\n",
+    "What output am I generating?\n",
+    "* A newly created file with a signature.\n",
+    "What guarantees am I given?\n",
+    "* The file exists, possibly.\n",
+    "What guarantees am I providing?\n",
+    "* A signature will be attached to the file, if it exists.\n"
    ]
   },
   {
@@ -130,8 +216,7 @@
     "20 years ago, the second best time\n",
     "is now.\" - Bob\"\"\"\n",
     "\n",
-    "test = Signature(\"data/email.txt\", sig)\n",
-    "test.add_sig()"
+    "add_sig(\"data/email.txt\", sig)"
    ]
   },
   {
@@ -152,14 +237,37 @@
     "            f.write(self.sig)\n",
     "        return self\n",
     "\n",
-    "test.add_sig().add_sig()"
+    "sig = \"\"\"\n",
+    "PHONE: 555-555-5555\n",
+    "EMAIL: BOB@bob.com\n",
+    "\"The best time to plant a tree was \n",
+    "20 years ago, the second best time\n",
+    "is now.\" - Bob\"\"\"\n",
+    "\n",
+    "test = Signature(\"data/email.txt\", sig)\n",
+    "test.add_sig()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stock Cleaning Class"
+    "## Stock Cleaning Class\n",
+    "\n",
+    "Write Python code takes in a file containing stock data, cleans data, and calculates the average on columns.\n",
+    "\n",
+    "Does this need to be a class?\n",
+    "* We will be changing the state of this data, so yes.\n",
+    "Does data need to be loaded constantly?\n",
+    "* Only when cleaning. Afterwards it can be stored.\n",
+    "What input am I getting?\n",
+    "* A CSV file of floats, potentially missing data.\n",
+    "What output am I generating?\n",
+    "* Clean data, statistics.\n",
+    "What guarantees am I given?\n",
+    "* File will exist.\n",
+    "What guarantees am I providing?\n",
+    "* Data will be clean, and averages will be computed on columns.\n"
    ]
   },
   {
@@ -176,8 +284,8 @@
     "    def __init__(self, file):\n",
     "        # don't load data just yet!\n",
     "        self.file = file\n",
-    "        # prepare a private empty tuple to contain clean data\n",
-    "        self.__clean_data = []\n",
+    "        # prepare a protected empty list to contain clean data\n",
+    "        self._clean_data = []\n",
     "\n",
     "    def clean(self, outpath):\n",
     "        # read in data and record only clean data\n",
@@ -201,7 +309,7 @@
     "            writer.writerows(new_data)\n",
     "        \n",
     "        # record in attribute\n",
-    "        self.__clean_data = new_data\n",
+    "        self._clean_data = new_data\n",
     "\n"
    ]
   },
@@ -222,6 +330,27 @@
    "metadata": {},
    "source": [
     "## GitHub\n",
+    "\n",
+    "Code is complex.\n",
+    "\n",
+    "Untracked code is even more complex.\n",
+    "\n",
+    "Code should be tracked\n",
+    "Why did this change happen?\n",
+    "Who made this change?\n",
+    "What did the code look like before?\n",
+    "What are we trying to build?\n",
+    "\n",
+    "Unshared code is even more complex (sometimes).\n",
+    "\n",
+    "Development should not be a one-person task.\n",
+    "We need fresh eyes.\n",
+    "We need testers.\n",
+    "We need domain experts. \n",
+    "We need other developers.\n",
+    "\n",
+    "\n",
+    "How do we share & track code?\n",
     "\n"
    ]
   }
