Added lab with correct code

--- a/phase_1/week_6/10_17/oop_2_notes.ipynb
+++ b/phase_1/week_6/10_17/oop_2_notes.ipynb
@@ -325,11 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from __future__ import annotations\n",
+    "import csv\n",
+    "import math\n",
     "\n",
     "class Fellow:\n",
     "\t\"\"\"Class to describe a fellow\n",
@@ -347,12 +349,16 @@
     "\t\tself.track = track\n",
     "\t\tself.familiars = familiars\n",
     "\n",
-    "\tdef in_common(self, other_fellow: 'Fellow'):\n",
+    "\tdef in_common(self, other_fellow):\n",
     "\t\tnew_list = []\n",
     "\t\tfor person in self.familiars:\n",
     "\t\t\tif person in other_fellow.familiars:\n",
     "\t\t\t\tnew_list .append(person)\n",
-    "\t\treturn new_list"
+    "\t\treturn new_list\n",
+    "\n",
+    "class Staff:\n",
+    "\tdef __init__(self, fellow: Fellow):\n",
+    "\t\tself.fellow = fellow"
    ]
   },
   {
