--- a/phase_1/week_6/lab/oop_ds_lab_review.ipynb
+++ b/phase_1/week_6/lab/oop_ds_lab_review.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "## Inheriting Stock Cleaner\n",
     "\n",
-    "Using inheritance, create a Python subclass called `StockProcessor` that inherits from `StockCleaner`. \n",
+    "Using inheritance, create a Python subclass called `StockProcessor` that inherits from `StockClean`. \n",
     "\n",
     "Our `clean()` method will stay the same, i.e. will not be overrided. In addition, our constructor is created for us. However, we will be creating three new methods as described below:\n",
     "\n",
     "`def get_total_volume(self):`\n",
-    "    This class will return the total volume of stock recorded in `self.__clean_data`.\n",
+    "    This class will return the total volume of stock recorded in `self._clean_data`.\n",
     "`def get_max(self, column):`\n",
-    "    This class will return the maximum value from a column inside of `self.__clean_data`.\n",
+    "    This class will return the maximum value from a column inside of `self._clean_data`.\n",
     "    The name of this column is passed in using the `column` parameter.\n",
     "`def get_min(self, column):`\n",
-    "    This class will return the minimum value from a column inside of `self.__clean_data`.\n",
+    "    This class will return the minimum value from a column inside of `self._clean_data`.\n",
     "    The name of this column is passed in using the `column` parameter.\n",
     "\n",
     "## Helpful Hints\n",
@@ -103,11 +103,11 @@
     "        [method description]\n",
     "    \"\"\"\n",
     "    # write code here, delete \"pass\"\n",
-    "    def __init__(self, file, outpath):\n",
+    "    def __init__(self, file, outfile):\n",
     "        # initialize attributes using the super class\n",
     "        super().__init__(file)\n",
     "        # clean this data by default\n",
-    "        self.clean(outpath)\n",
+    "        self.clean(outfile)\n",
     "    \n",
     "    def get_total_volume(self):\n",
     "        pass\n",
@@ -127,7 +127,7 @@
    "source": [
     "## test code, do not modify!\n",
     "\n",
-    "processor = StockProcessor(\"data/AMZN_err.csv\", \"AMZN_clean.csv\")\n",
+    "processor = StockProcessor(\"data/AMZN_err.csv\")\n",
     "\n",
     "# print out total volume\n",
     "print(processor.get_total_volume())\n",
