--- a/phase_1/week_6/lab/oop_ds_review_notes.ipynb
+++ b/phase_1/week_6/lab/oop_ds_review_notes.ipynb
@@ -13,14 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.642857142857142\n",
+      "13.357142857142858\n"
+     ]
+    }
+   ],
    "source": [
     "year_2005 = {\"median\": 1051, \"average\": 1129, \"us-average\": 910}\n",
-    "year_2019 = {\"median\": 1309, \"average\": 1390, \"us-average\": 1097}\n",
-    "\n",
-    "# write solution here"
+    "year_2019 = {\"median\": 1309, \"average\": 1390, \"us-average\": 1097}\n"
    ]
   },
   {
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +275,53 @@
     "* File will exist.\n",
     "What guarantees am I providing?\n",
     "* Data will be clean, and averages will be computed on columns.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "True\n",
+      "2\n",
+      "True\n",
+      "3\n",
+      "True\n",
+      "4\n",
+      "True\n",
+      "5\n",
+      "False\n",
+      "While loop is done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "class StockClean:\n",
+    "    def __init__(self, filepath):\n",
+    "        self.filepath = filepath\n",
+    "        self.data = []\n",
+    "    \n",
+    "    def clean(self):\n",
+    "        with open(self.filepath, \"r\") as infile:\n",
+    "            reader = csv.DictReader(infile)\n",
+    "            for r in reader:\n",
+    "                #print(r)\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "sc = StockClean(\"data/AMZN_err.csv\")\n",
+    "sc.clean()\n",
+    "sc.data\n",
+    "\n",
+    "\n",
+    "alpha = [\"a\", \"b\", \"c\", \"d\"]\n"
    ]
   },
   {
