Added python notes & practice

--- a/phase_1/week_6/lab/oop_ds_lab.ipynb
+++ b/phase_1/week_6/lab/oop_ds_lab.ipynb
@@ -11,19 +11,21 @@
     "Our `clean()` method will stay the same, i.e. will not be overrided. In addition, our constructor is created for us. However, we will be creating three new methods as described below:\n",
     "\n",
     "`def get_total_volume(self):`\n",
-    "    This class will return the total volume of stock recorded in `self.__clean_data`.\n",
+    "    This class will return the total volume of stock recorded in `self._clean_data`.  \n",
+    "    \n",
     "`def get_max(self, column):`\n",
-    "    This class will return the maximum value from a column inside of `self.__clean_data`.\n",
-    "    The name of this column is passed in using the `column` parameter.\n",
+    "    This class will return the maximum value from a column inside of `self._clean_data`.  \n",
+    "    The name of this column is passed in using the `column` parameter.  \n",
+    "\n",
     "`def get_min(self, column):`\n",
-    "    This class will return the minimum value from a column inside of `self.__clean_data`.\n",
-    "    The name of this column is passed in using the `column` parameter.\n",
+    "    This class will return the minimum value from a column inside of `self._clean_data`.  \n",
+    "    The name of this column is passed in using the `column` parameter.  \n",
     "\n",
     "## Helpful Hints\n",
-    "* You will need to iterate over `self.__clean_data` to generate aggregate calculations.\n",
+    "* You will need to iterate over `self._clean_data` to generate aggregate calculations.\n",
     "* Do not reload data! No File I/O is required for these methods.\n",
-    "* Assume that the clean method has been called already, and that we have data inside of our list `self.__clean_data`.\n",
-    "* We can iterate over `self.__clean_data` using the following for-loop:\n",
+    "* Assume that the clean method has been called already, and that we have data inside of our list `self._clean_data`.\n",
+    "* We can iterate over `self._clean_data` using the following for-loop:\n",
     "```python\n",
     "for row in self.__clean_data:\n",
     "```\n",
