--- a/phase_1/week_7/10_25/python_review_II_notes.ipynb
+++ b/phase_1/week_7/10_25/python_review_II_notes.ipynb
@@ -5,7 +5,24 @@
    "metadata": {},
    "source": [
     "## Debugging\n",
-    "\n"
+    "\n",
+    "How do we solve these bugs? There is usually a workflow to this sort of problem-solving.\n",
+    "\n",
+    "1. Observe error or incorrect output.\n",
+    "\n",
+    "2. Formulate a fix in your mind (hypothesis). Make sure that you could defend this idea!\n",
+    "\t(in this case, some variable needs to be type-casted)\n",
+    "\n",
+    "3. Implement fix and run. Loop as needed.\n",
+    "\n",
+    "How do you formulate a fix?\n",
+    "\n",
+    "Multiple methods:\n",
+    "* Google error message.\n",
+    "\n",
+    "* Walk through your program out loud. “Rubber duck debugging.” https://en.wikipedia.org/wiki/Rubber_duck_debugging \n",
+    "\n",
+    "* Change input (if applicable).\n"
    ]
   },
   {
@@ -36,8 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Syntax Debugging Review\n",
-    "\n"
+    "## Syntax Debugging Review (Syntax)\n",
+    "What do we need to change here?"
    ]
   },
   {
@@ -69,8 +86,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logic Debugging Example\n",
-    "\n"
+    "## Logic Debugging Example (Semantics)\n",
+    "Syntax is correct, but what do we need to change here?"
    ]
   },
   {
@@ -100,7 +117,16 @@
    "metadata": {},
    "source": [
     "## For Loops Review\n",
-    "\n"
+    "\n",
+    "Whereas while-loops are designed to keep looping until something is false, for-loops are designed to loop until we have nothing more to loop through. The structure is:\n",
+    "\n",
+    "`for var in iterable:`\n",
+    "An “iterable” is anything that can be “iterated” through or “looped” through. Any type of data that is composed of individual elements. This could be:\n",
+    "* A list\n",
+    "* The “range” function\n",
+    "* A set\n",
+    "* A dictionary\n",
+    "* A string"
    ]
   },
   {
@@ -163,22 +189,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Structs Review"
+    "## Data Structs Review\n",
+    "\n",
+    "\n",
+    "We use data-structures to group together individual data. There are 3 basic data structures we should know:\n",
+    "\n",
+    "* Lists (AKA Arrays)\n",
+    "* Sets \n",
+    "* Dictionaries (AKA HashMaps)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Lists Review\n",
-    "\n"
+    "\n",
+    "Lists are created with the square-brackets “[]”. They are:\n",
+    "\n",
+    "* Mutable (can be changed)\n",
+    "* Sequenced (we can access its elements using an index)\n",
+    "* https://docs.python.org/3/tutorial/datastructures.html#more-on-lists "
    ]
   },
   {
@@ -222,7 +253,13 @@
    "metadata": {},
    "source": [
     "## Sets Review\n",
-    "\n"
+    "\n",
+    "Sets are created with the curly-brackets “{}”. They are:\n",
+    "\n",
+    "* Mutable (can be changed)\n",
+    "* Not Sequenced (cannot access using index!)\n",
+    "* Only contain unique values\n",
+    "* https://docs.python.org/3/tutorial/datastructures.html#sets\n"
    ]
   },
   {
@@ -242,7 +279,13 @@
    "metadata": {},
    "source": [
     "## Dictionaires Review\n",
-    "\n"
+    "\n",
+    "Dictionaries are also created with the curly-brackets “{}”. They are:\n",
+    "\n",
+    "* Mutable (can be changed)\n",
+    "* Not Sequenced (cannot access using index!)\n",
+    "* Contain key-value pairs\n",
+    "* https://docs.python.org/3/tutorial/datastructures.html#dictionaries "
    ]
   },
   {
