Added notes & README

--- a/phase_1/week_8/11_1/python_advanced_II_notes.ipynb
+++ b/phase_1/week_8/11_1/python_advanced_II_notes.ipynb
@@ -236,7 +236,7 @@
     "list_data = [\n",
     "    {\"GeoName\": \"Alabama\", \"1997\": 100, \"1998\": 102},\n",
     "    {\"GeoName\": \"Alaska\", \"1997\": 50, \"1998\": 40},\n",
-    "\t{\"GeoName\": \"New York\", \"1997\": 600, \"1998\": 650}\n",
+    "\t{\"GeoName\": \"New York\", \"1997\": 600, \"1998\": 650},\n",
     "    {\"GeoName\": \"Arizona\", \"1997\": 150, \"1998\": 160},\n",
     "    {\"GeoName\": \"California\", \"1997\": 1000, \"1998\": 1001},\n",
     "    {\"GeoName\": \"Texas\", \"1997\": 500, \"1998\": 540}\n",
