--- a/phase_1/week_9/11_7/time_api_notes.ipynb
+++ b/phase_1/week_9/11_7/time_api_notes.ipynb
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-31000, -16000, -12000, -43000, 0]\n",
-      "[6857796246377117304, 1920180055493143652, 6623044889915561163, -5127201043210634948]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4039672529.py, line 39)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    react =\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -45,6 +45,7 @@
     "\n",
     "# translate to list comprehension here\n",
     "variations = []\n",
+    "print(variations)\n",
     "\n",
     "## PT 2\n",
     "secrets = [\n",
@@ -60,7 +61,7 @@
     "print(hiddens)\n",
     "\n",
     "# translate to list comprehension here\n",
-    "hiddens = []\n",
+    "hiddens = [hash(message) for message in secrets]\n",
     "\n",
     "## PT 3\n",
     "volts = 931\n",
