Added additional notes

--- a/phase_1/week_9/Lab/api_notes.ipynb
+++ b/phase_1/week_9/Lab/api_notes.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n"
+    "import requests\n",
+    "# write code here"
    ]
   },
   {
@@ -55,14 +56,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Requests\n",
-    "\n"
+    "\n",
+    "So far we’ve been using the `requests` module to get data from a URL, but what are we really doing?\n",
+    "\n",
+    "We are getting a resource from the internet using HTTP requests\n",
+    "https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview \n",
+    "\n",
+    "We can use `requests` to get data from a web-page. Traditionally we do this over our browser.\n",
+    "\n",
+    "But we can also accomplish this via Python."
    ]
   },
   {
@@ -81,7 +92,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Practice Problem\n"
+    "As data engineers and analysts, we want to practice our skills in getting data from an API (or “extracting”), which we will then transform and load\n",
+    "\n",
+    "This is known as the ETL (Extract-Transform-Load) process.\n",
+    "\n",
+    "We use an API to “request” data (using the requests module) so that we can begin the very first step of the ETL process.\n",
+    "\n",
+    "This is often only one of the data sources that we query. We will learn about & review the following methods as well:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Problem\n",
+    "\n",
+    "We can then tie in other concepts to accomplish a variety of tasks.\n",
+    "\n",
+    "Let’s say we want to create a new CSV file of 10 star wars planets & their climates\n",
+    "\n",
+    "Firstly let’s consider, which modules do we need to request our data & then save it into a csv file?"
    ]
   },
   {
@@ -91,6 +121,17 @@
    "outputs": [],
    "source": [
     "# write code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We just mimicked the ETL process!\n",
+    "\n",
+    "We extracted data from a resource\n",
+    "We structured it to fit our restrictions\n",
+    "We didn’t really load anything, but we could use the CSV file to make interesting analysis! "
    ]
   },
   {
@@ -130,18 +171,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Stock API\n",
-    "\n"
+    "\n",
+    "Use an API to load data.\n",
+    "Use the csv module to write data\n",
+    "Use base-Python to analyze data "
    ]
   },
   {
