added insert order

--- a/phase_1/week_10/11_14/coding_problem.ipynb
+++ b/phase_1/week_10/11_14/coding_problem.ipynb
@@ -39,10 +39,10 @@
     "print(\"Test 1:\", insert_order([4, 10, 12, 24, 64], 13) == [4, 10, 12, 13, 24, 64])\n",
     "print(\"Check ordering here:\", insert_order([4, 10, 12, 24, 64], 13))\n",
     "\n",
-    "print(\"Test 2:\", insert_order([4, 10, 12, 24, 64], 65) == [4, 10, 12, 24, 65])\n",
+    "print(\"Test 2:\", insert_order([4, 10, 12, 24, 64], 65) == [4, 10, 12, 24, 64, 65])\n",
     "print(\"Check ordering here:\", insert_order([4, 10, 12, 24, 64], 65))\n",
     "\n",
-    "print(\"Test 3:\", insert_order([4, 10, 12, 24, 64], 1) == [1, 4, 10, 12, 24])\n",
+    "print(\"Test 3:\", insert_order([4, 10, 12, 24, 64], 1) == [1, 4, 10, 12, 24, 64])\n",
     "print(\"Check ordering here:\", insert_order([4, 10, 12, 24, 64], 1))"
    ]
   }
