--- a/phase_1/week_10/11_15/statistics_II_notes.ipynb
+++ b/phase_1/week_10/11_15/statistics_II_notes.ipynb
@@ -55,7 +55,68 @@
    "metadata": {},
    "source": [
     "## Stats Review\n",
-    "\n"
+    "\n",
+    "Statistics is what we use when we want to gain insight on a dataset.\n",
+    "\n",
+    "Our basics for yesterday were:\n",
+    "\n",
+    "Range\n",
+    "Mean\n",
+    "Median\n",
+    "Mode\n",
+    "\n",
+    "If population mean, median, and mode are the same, we have a normal distribution (gaussian distribution)\n",
+    "\n",
+    "Other distributions usually describe a specific phenomenon \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from statistics import median, mode\n",
+    "\n",
+    "names = [\n",
+    "  'Tom', 'Ezequiel', 'Emma', 'Michael', 'Jackie', 'Jonnathan', 'Michael',\n",
+    "  'Caridad', 'Ebony', 'Rigoberto', 'Tajrin', 'Neferatari', 'Thierno', 'Tumade',\n",
+    "  'Ari', 'Anastasiya', 'Farukh', 'Axl', 'Maurice', 'Zamira'\n",
+    "]\n",
+    "\n",
+    "lens = [len(name) for name in names]\n",
+    "\n",
+    "print(\"Mode\", mode(lens))\n",
+    "print(\"Median\", median(lens))\n",
+    "print(\"Sample Mean x-bar\", sum(lens) / len(lens))\n",
+    "\n",
+    "n, bins = np.histogram(lens, bins=8)\n",
+    "\n",
+    "plt.hist(lens, bins=bins)\n",
+    "\n",
+    "# Show plot\n",
+    "plt.savefig(\"figure.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost everything in the world takes this bell-shaped curve\n",
+    "\n",
+    "Here we have a frequency of the character count of all of our names\n",
+    "\n",
+    "Mean: 7\n",
+    "Median: 6.5\n",
+    "X-bar: 6.45\n",
+    "\n",
+    "Why aren’t these numbers exactly the same?\n",
+    "\n",
+    "When we calculate on a sample of data, we are estimating, true calculation comes from population data\n",
+    "\n",
+    "Almost always impossible\n"
    ]
   },
   {
@@ -64,7 +125,21 @@
    "source": [
     "## Detecting Skew\n",
     "\n",
-    "Calculate the mean, median, and mode of the following dataset. What is the "
+    "Non-normal distributions can take the following form:\n",
+    "\n",
+    "\n",
+    "Negatively-skewed: Mean < Median < Mode\n",
+    "Massively negative outlier (global temps after dinosaur extinction event)\n",
+    "Or, most values concentrated to the right\n",
+    "\n",
+    "\n",
+    "\n",
+    "Positively-skewed: Mean > Median > Mode\n",
+    "Massively positive outlier (Jeff Bezos net worth)\n",
+    "Or, most values concentrated to the left\n",
+    "\n",
+    "\n",
+    "Calculate the mean, median, and mode of the following dataset. What is the skew of this dataset?"
    ]
   },
   {
@@ -101,7 +176,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can use distribution to describe which ranges of values are most common, and which are the least common.\n",
+    "\n",
+    "But in order to do this, we must calculate the variance & standard deviation. \n",
+    "\n",
+    "How “spread” is our data around our sample mean\n",
+    "\n",
+    "This can tell us what is an outlier, and what is not.\n",
+    "\n",
+    "We could calculate an answer if we had population mean, but we almost never do, so we estimate using sample mean\n",
+    "\n",
+    "We do not see the “curve”, we only have the sample data\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -135,7 +222,18 @@
    "metadata": {},
    "source": [
     "## Calculating Variance\n",
-    "\n"
+    "\n",
+    "Variance is a metric that describes how “spread out” our data is from the sample average.\n",
+    "\n",
+    "It is the sum of the differences between each value and the sample  mean, divided by the length of the list - 1.\n",
+    "\n",
+    "Larger variance, subjectively speaking, indicates values are spread further away from the mean.\n",
+    "\n",
+    "We will only focus on estimated pop. variance, since we never have the full picture \n",
+    "\n",
+    "```\n",
+    "var = sum([(val - mean)**2 for val in salaries])/len(salaries) - 1\n",
+    "```"
    ]
   },
   {
@@ -171,22 +269,51 @@
    "metadata": {},
    "source": [
     "## Calculating Standard Deviation\n",
+    "\n",
+    "Variance is often only an intermediate result used to get other measures. \n",
+    "\n",
+    "One problem with variance is the units, this gives us salary^2.\n",
+    "\n",
+    "We could take the square root of variance to get standard deviation, aka stdev. \n",
+    "\n",
+    "```\n",
+    "stdev = sqrt(variance)\n",
+    "```\n",
+    "\n",
+    "Standard deviation also describes how “spread” our values are from the sample mean.\n",
+    "\n",
+    "This estimated stdev on sample is a very good representation of our pop. stdev. We will view this later.\n",
+    "\n",
+    "The larger variance, the larger the stdev, the greater the spread. \n",
+    "\n",
+    "We state that:\n",
+    "68% of our data lies w/in\n",
+    "1 stdev\n",
+    "\n",
+    "95% of our data lies w/in \n",
+    "2 stdevs\n",
+    "\n",
+    "99.6% of our data lies w/in\n",
+    "3 stdevs\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Finding Outliers\n",
-    "\n"
+    "\n",
+    "Let’s expand our dataset to include many average salaries, and one gigantic salary: “$25,000,000.” \n",
+    "\n",
+    "How can you identify this last value as an outlier?\n",
+    "\n",
+    "We can use standard deviation again: \n",
+    "Mean: 150,342 \n",
+    "Stdev: 1,581,390\n",
+    "(notice how skewed our calculations are with this outlier)\n",
+    "\n",
+    "We can state, if a data-point is beyond 3 standard deviations, this is an outlier. What is 3 standard deviations from the mean?"
    ]
   },
   {
@@ -272,7 +399,18 @@
    "metadata": {},
    "source": [
     "## Central Limit Theorem\n",
-    "\n"
+    "\n",
+    "In a nutshell: the central limit theorem states that your sample mean will always follow a normal distribution when using the population mean as the average.\n",
+    "\n",
+    "What do we mean by this? Let’s break it down.\n",
+    "\n",
+    "We have a dataset that represents our population. \n",
+    "\n",
+    "We cannot survey this entire dataset, so we use samples instead.\n",
+    "\n",
+    "We calculate means on this sample.\n",
+    "\n",
+    "If we calculate the mean on a random sample a bunch of times, and plot the means that we get, we get the bell-curve!!!\n"
    ]
   },
   {
@@ -350,7 +488,8 @@
    "metadata": {},
    "source": [
     "## Law of large numbers\n",
-    "\n"
+    "\n",
+    "The more experiments we run, or the more data we collect, the closer we get to the expected calculations (aka the population mean, the population variance, the population standard deviation)"
    ]
   },
   {
