--- a/phase_1/week_10/Lab/lab_notes.ipynb
+++ b/phase_1/week_10/Lab/lab_notes.ipynb
@@ -49,6 +49,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The turkey’s predict that on thanksgiving day, they will get even more ounces of food and living standards will go up.\n",
+    "\n",
+    "The turkey’s were wrong! \n",
+    "\n",
+    "But how could they have been wrong? They had the data. We saw a positive skew in food and a positive relationship in feed vs. number of days!\n",
+    "\n",
+    "What could have they done to better predict this outcome?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -136,7 +149,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outliers Review"
+    "## Outliers Review\n",
+    "\n",
+    "We utilize variance & stdev (not stdev.p) to detect outliers and see where our data will usually falls.\n",
+    "\n",
+    "Variance is a sum of differences squared.\n",
+    "\n",
+    "Stdev is the square root of the sum of difference squared\n",
+    "\n",
+    "99.6% of data falls within 3 standard deviations of the mean."
    ]
   },
   {
@@ -180,17 +201,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "responses = [1, 2, 3, 3, 4, 4, 4, 4, 5, 6, 20]\n",
+    "When we calculated the stdev of our salaries dataset, we saw stdev = $33,249.89\n",
     "\n",
-    "plt.hist(responses)\n",
-    " \n",
-    "# Show plot\n",
-    "plt.show()"
+    "This means, we expect 99.6% of \n",
+    "our data to be between:\n",
+    "\n",
+    "```\n",
+    "$65,000 + 3 * $33,249 = $164,747\n",
+    "$65,000 - 3 * $33,249 = $-34,747\n",
+    "```\n",
+    "\n",
+    "We get strange values when our dataset\n",
+    "is too small. ($-34,000/year?)\n",
+    "\n",
+    "But now that we’ve identified [200_000, 200_000, 200_000, 200_000, 200_000, 200_000] as outliers, what do we do with these?\n",
+    "\n",
+    "We could potentially remove them if we want to ask fundamental questions about the “average” american experience:\n",
+    "\n",
+    "* Effects of free-college on familial wealth\n",
+    "\n",
+    "* Effects of the pandemic on average American\n",
+    "\n",
+    "Or if we want a wholesale picture, we keep these outliers."
    ]
   },
   {
@@ -198,7 +233,18 @@
    "metadata": {},
    "source": [
     "## Central Limit Theorem Review\n",
-    "\n"
+    "\n",
+    "In a nutshell: the central limit theorem states\n",
+    "\n",
+    "Sample mean of population forms a normal distribution around population mean.\n",
+    "\n",
+    "This means: Our sample mean is most likely not an outlier, aka falls within 3 standard deviations of our population mean.\n",
+    "\n",
+    "Let’s prove this:\n",
+    "\n",
+    "We have a population of salaries (~100 data points)\n",
+    "\n",
+    "I collect 20 samples randomly 3 times, let’s view the results.\n"
    ]
   },
   {
@@ -263,6 +309,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look’s like my sample means are orbiting some central point.\n",
+    "\n",
+    "Let’s conduct this trial not once or 3 times, but rather 100 times.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -303,7 +358,14 @@
    "metadata": {},
    "source": [
     "## Law of Large Numbers\n",
-    "\n"
+    "\n",
+    "In the above experiment, our population mean is $52,943. This is our expected value.\n",
+    "\n",
+    "Our estimated value is the mean of sample means. (sample is always estimated).\n",
+    "\n",
+    "The law of large number states that, as we conduct more trials or experiments, the closer our estimated value gets to our expected value\n",
+    "\n",
+    "Let’s see how the mean of our sample means behaves as we conduct more experiments.\n"
    ]
   },
   {
