--- a/phase_1/week_11/11_21/coding_problem.ipynb
+++ b/phase_1/week_11/11_21/coding_problem.ipynb
@@ -6,28 +6,20 @@
    "source": [
     "## Review\n",
     "\n",
-    "Given a string s, create a function called `reverseOnlyLetters(s)` that reverses the string according to the following rules:\n",
+    "Create a function called `isSub(s, t)`. Given two strings `s` and `t`, return true if `s` is a subsequence of `t`, or false otherwise.\n",
     "\n",
-    "* All the characters that are not English letters remain in the same position.\n",
-    "* All the English letters (lowercase or uppercase) should be reversed.\n",
-    "* Return s after reversing it.\n",
+    "A subsequence of a string is a new string that is formed from the original string by deleting some (can be none) of the characters without disturbing the relative positions of the remaining characters. (i.e., \"ace\" is a subsequence of \"abcde\" while \"aec\" is not).\n",
     "\n",
     "Example 1\n",
     "```\n",
-    "Input: s = \"ab-cd\"\n",
-    "Output: \"dc-ba\"\n",
+    "Input: s = \"abc\", t = \"ahbgdc\"\n",
+    "Output: true\n",
     "```\n",
     "\n",
     "Example 2\n",
     "```\n",
-    "Input: s = \"a-bC-dEf-ghIj\"\n",
-    "Output: \"j-Ih-gfE-dCba\"\n",
-    "```\n",
-    "\n",
-    "Example 3\n",
-    "```\n",
-    "Input: s = \"Test1ng-Leet=code-Q!\"\n",
-    "Output: \"Qedo1ct-eeLg=ntse-T!\"\n",
+    "Input: s = \"axc\", t = \"ahbgdc\"\n",
+    "Output: false\n",
     "```\n",
     "\n",
     "Once you have a solution consider how you can make it more efficient in time complexity."
@@ -39,9 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write solution here\n",
-    "def reverseOnlyLetters(s):\n",
-    "    pass"
+    "def isSub(s, t):\n",
+    "    pass\n",
+    "    # write code here"
    ]
   },
   {
@@ -51,10 +43,8 @@
    "outputs": [],
    "source": [
     "# test code here\n",
-    "print(\"Test case 1:\", reverseOnlyLetters(\"ab-cd\") == \"dc-ba\")\n",
-    "print(\"Test case 2:\", reverseOnlyLetters(\"abcd\") == \"dcba\")\n",
-    "print(\"Test case 3:\", reverseOnlyLetters(\"a-bC-dEf-ghIj\") == \"j-Ih-gfE-dCba\")\n",
-    "print(\"Test case 4:\", reverseOnlyLetters(\"Test1ng-Leet=code-Q!\") == \"Qedo1ct-eeLg=ntse-T!\")"
+    "print(\"Test case 1:\", isSub(\"abc\", \"ahbgdc\") == True)\n",
+    "print(\"Test case 2:\", isSub(\"axc\", \"ahbgdc\") == False)"
    ]
   }
  ],
