--- a/phase_1/week_12/11_28/basics_review.ipynb
+++ b/phase_1/week_12/11_28/basics_review.ipynb
@@ -160,6 +160,15 @@
     "\n",
     "Create a while loop that goes through integers of 1 to 50 and prints \"Fizz\" for multiples of 3, and \"Buzz\" for multiples of \"5\", and \"FizzBuzz\" for multiples of 3 and 5."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
   }
  ],
  "metadata": {
