--- a/phase_1/week_12/11_28/complexity_review.ipynb
+++ b/phase_1/week_12/11_28/complexity_review.ipynb
@@ -104,6 +104,31 @@
     "\n",
     "func4([1,2,3,4,5,6,7,8])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "\n",
+    "What is the time and space complexity of the following algorithm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func5(n):\n",
+    "    square_list = []\n",
+    "    for num in n:\n",
+    "        square_list.append(num * num)\n",
+    "\n",
+    "    return square_list\n",
+    "\n",
+    "func5([1,2,3,4])"
+   ]
   }
  ],
  "metadata": {
